# youtube-video-rag

./: .coverage  .gitignore  12_Pipeline_State_Model.md  ORIGINAL_REQUEST.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.agents/: ORIGINAL_REQUEST.md  README.md
.agents/auditor_m4/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/context/: architecture.md  coding_standards.md  project_summary.md  roadmap.md  tech_stack.md  video_template.md  voice_modes.md
.agents/explorer_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  context.md  handoff.md  plan.md  progress.md
.agents/orchestrator_phase02/: BRIEFING.md  ORIGINAL_REQUEST.md  SCOPE.md  handoff.md  progress.md
.agents/prompts/: debugging.md  implementation.md  review.md  testing.md
.agents/reviewer_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/reviewer_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  (+2 more)
PromptBook/: 00_Project_Context.md  01_Global_Rules.md  02_Project_Architecture.md  03_Project_Standards.md  04_Folder_Structure.md  05_Project_Roadmap.md  06_AI_Development_Guide.md  07_Prompt_Template_Library.md  09_Plugin_SDK.md  10_Event_Driven_Architecture.md  11_Event_Catalog.md  11_Workflow_Engine.md  12_Event_Schemas.md  13_Build_Prompts.md
scripts/: ci.sh  deploy.py  release.py
src/: __main__.py
tests/: conftest.py
youtube_video_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+756 files in other folders)
